--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <h2>Fonctionnement</h2>
                 <nav>
                     <ul>
-                        <a href="#restaurant"><li class="choix"><i class="fa-solid fa-1"></i><i class="fa-solid fa-mobile-screen-button choix_icon"></i>Choisissez un restaurant</li></a>
+                        <li class="choix"><a href="#restaurant"><i class="fa-solid fa-1"></i><i class="fa-solid fa-mobile-screen-button choix_icon"></i>Choisissez un restaurant</a></li>
                         <li class="choix"><i class="fa-solid fa-2"></i><i class="fa-solid fa-list choix_icon"></i>Composez votre menu</li>
                         <li class="choix"><i class="fa-solid fa-3"></i><i class="fa-solid fa-store choix_icon"></i>Dégustez au restaurant</li>
                     </ul>
@@ -47,8 +47,8 @@
             <div id="section_restaurant">
                 <h2 id="restaurant">Restaurants</h2>
                 <div id="section_restaurant_1_2">
+                    <a href="./html/La_palette_du_goût.html">
                     <figure id="restaurant_1">
-                        <a href="./html/La palette du goût.html">
                         <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût">
                         <p class="nouveau">Nouveau</p>
                         <figcaption>
@@ -56,14 +56,14 @@
                             <div class="descirption_restaurant">
                                 <p>Ménilmontant</p>
                             </div>
-                        </figcaption></a>
+                        </figcaption>
                         <div class="coeur">
                             <i class="fa-regular fa-heart contour"></i>
                             <i class="fa-solid fa-heart plein"></i>
                         </div>
-                    </figure>
+                    </figure></a>
+                    <a href="./html/La_note_enchantée.html">
                     <figure id="restaurant_2">
-                        <a href="./html/La note enchantée.html">
                         <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée">
                         <p class="nouveau">Nouveau</p>
                         <figcaption>
@@ -71,54 +71,54 @@
                             <div class="descirption_restaurant">
                                 <p>Charonne</p>
                             </div>
-                        </figcaption></a>
+                        </figcaption>
                         <div class="coeur">
                             <i class="fa-regular fa-heart contour"></i>
                             <i class="fa-solid fa-heart plein"></i>
                         </div>
-                    </figure>
+                    </figure></a>
                 </div>
                 <div id="section_restaurant_3_4">
+                    <a href="./html/A_la_française.html">
                     <figure id="restaurant_3">
-                        <a href="./html/A la française.html">
                         <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="A la française">
                         <figcaption>
                             <h3>A la française</h3>
                             <div class="descirption_restaurant">
                                 <p>Cité Rouge</p>
                             </div>
-                        </figcaption></a>
+                        </figcaption>
                         <div class="coeur">
                             <i class="fa-regular fa-heart contour"></i>
                             <i class="fa-solid fa-heart plein"></i>
                         </div>
-                    </figure>
+                    </figure></a>
+                    <a href="./html/Le_délice_des_sens.html">
                     <figure id="restaurant_4">
-                        <a href="./html/Le délice des sens.html">
                         <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens">
                         <figcaption>
                             <h3>Le délice des sens</h3>
                             <div class="descirption_restaurant">
                                 <p>Folie-Méricourt</p>
                             </div>
-                        </figcaption></a>
+                        </figcaption>
                         <div class="coeur">
                             <i class="fa-regular fa-heart contour"></i>
                             <i class="fa-solid fa-heart plein"></i>
                         </div>
-                    </figure>
+                    </figure></a>
                 </div>
             </div>
         </section>
 
-        <section id="spinner">
+        <aside id="spinner">
             <div class="loader">
                 <span></span>
                 <span></span>
                 <span></span>
                 <span class="centre">ohmyfood</span>
             </div>
-        </section>
+        </aside>
 
         <footer>
             <div id="bloc_footer">
