--- a/index.html
+++ b/index.html
@@ -47,66 +47,74 @@
             <div id="section_restaurant">
                 <h2 id="restaurant">Restaurants</h2>
                 <div id="section_restaurant_1_2">
-                    <a href="./html/La_palette_du_goût.html">
-                    <figure id="restaurant_1">
-                        <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût">
-                        <p class="nouveau">Nouveau</p>
-                        <figcaption>
-                            <h3>La palette du goût</h3>
-                            <div class="descirption_restaurant">
-                                <p>Ménilmontant</p>
-                            </div>
-                        </figcaption>
+                    <div class="carte_restaurant">
+                        <a href="./html/La_palette_du_goût.html">
+                        <figure id="restaurant_1">
+                            <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût">
+                            <p class="nouveau">Nouveau</p>
+                            <figcaption>
+                                <h3>La palette du goût</h3>
+                                <div class="descirption_restaurant">
+                                    <p>Ménilmontant</p>
+                                </div>
+                            </figcaption>
+                        </figure></a>
                         <div class="coeur">
                             <i class="fa-regular fa-heart contour"></i>
                             <i class="fa-solid fa-heart plein"></i>
                         </div>
-                    </figure></a>
-                    <a href="./html/La_note_enchantée.html">
-                    <figure id="restaurant_2">
-                        <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée">
-                        <p class="nouveau">Nouveau</p>
-                        <figcaption>
-                            <h3>La note enchantée</h3>
-                            <div class="descirption_restaurant">
-                                <p>Charonne</p>
-                            </div>
-                        </figcaption>
+                    </div>
+                    <div class="carte_restaurant">
+                        <a href="./html/La_note_enchantée.html">
+                        <figure id="restaurant_2">
+                            <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée">
+                            <p class="nouveau">Nouveau</p>
+                            <figcaption>
+                                <h3>La note enchantée</h3>
+                                <div class="descirption_restaurant">
+                                    <p>Charonne</p>
+                                </div>
+                            </figcaption>
+                        </figure></a>
                         <div class="coeur">
                             <i class="fa-regular fa-heart contour"></i>
                             <i class="fa-solid fa-heart plein"></i>
                         </div>
-                    </figure></a>
+                    </div>
                 </div>
                 <div id="section_restaurant_3_4">
-                    <a href="./html/A_la_française.html">
-                    <figure id="restaurant_3">
-                        <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="A la française">
-                        <figcaption>
-                            <h3>A la française</h3>
-                            <div class="descirption_restaurant">
-                                <p>Cité Rouge</p>
-                            </div>
-                        </figcaption>
+                    <div class="carte_restaurant">
+                        <a href="./html/A_la_française.html">
+                        <figure id="restaurant_3">
+                            <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="A la française">
+                            <figcaption>
+                                <h3>A la française</h3>
+                                <div class="descirption_restaurant">
+                                    <p>Cité Rouge</p>
+                                </div>
+                            </figcaption>
+                        </figure></a>
                         <div class="coeur">
                             <i class="fa-regular fa-heart contour"></i>
                             <i class="fa-solid fa-heart plein"></i>
                         </div>
-                    </figure></a>
-                    <a href="./html/Le_délice_des_sens.html">
-                    <figure id="restaurant_4">
-                        <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens">
-                        <figcaption>
-                            <h3>Le délice des sens</h3>
-                            <div class="descirption_restaurant">
-                                <p>Folie-Méricourt</p>
-                            </div>
-                        </figcaption>
+                    </div>
+                    <div class="carte_restaurant">
+                        <a href="./html/Le_délice_des_sens.html">
+                        <figure id="restaurant_4">
+                            <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens">
+                            <figcaption>
+                                <h3>Le délice des sens</h3>
+                                <div class="descirption_restaurant">
+                                    <p>Folie-Méricourt</p>
+                                </div>
+                            </figcaption>
+                        </figure></a>
                         <div class="coeur">
                             <i class="fa-regular fa-heart contour"></i>
                             <i class="fa-solid fa-heart plein"></i>
                         </div>
-                    </figure></a>
+                    </div>
                 </div>
             </div>
         </section>
